--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Блог</h1>
     <p>Привет, меня зовут, Вита, сегодня я немного расскажу о себе и о моём коте.</p>
     <div>Это я</div>.
-    <div><img src="images/5.jpg" width="450" height="450" alt="Это я)"></div>
+    <div><img src="images/5.jpg" width="450" height="450" alt="Это я"></div>
     <div>Я учусь на 3-ем курсе в УКИТе</div>
     <div>На дистанционном обучении я чаще всего занимаюсь:<br>
         <ul>
