--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Блог</h1>
     <p>Привет, меня зовут, Вита, сегодня я немного расскажу о себе и о моём коте.</p>
-    <div>Это я</div>.
-    <div><img src="images/5.jpg" width="450" height="450" alt="Это я"></div>
-    <div>Я учусь на 3-ем курсе в УКИТе</div>
+    <div>Это я</div>
+    <div><img src="Images/5.jpg" width="450" height="450" alt="Это я"></div>
+    <div>Я учусь на 3-ем курсе в МГКИТе</div>
     <div>На дистанционном обучении я чаще всего занимаюсь:<br>
         <ul>
             <li>Много сплю</li>
@@ -33,23 +33,23 @@
         <ul>
             <li>Он у меня футболист</li>
         </ul>
-        <div><img src="images/1.jpg" width="300" height="500"</div>
+        <div><img src="Images/1.jpg" width="300" height="500"</div>
         <ul>
             <li>А также немножко мангуст</li>
         </ul>   
-        <div><img src="images/2.jpg" width="300" height="500"</div>
+        <div><img src="Images/2.jpg" width="300" height="500"</div>
         <ul>
             <li>Так кот мне помогал отмечать новый год</li>
         </ul>
-        <div><img src="images/3.jpg" width="300" height="500"</div>
+        <div><img src="Images/3.jpg" width="300" height="500"</div>
         <ul>
             <li>А также он тот ещё обжора</li>
         </ul>
-        <div><img src="images/4.jpg" width="300" height="500"</div>
+        <div><img src="Images/4.jpg" width="300" height="500"</div>
         <ul>
             <li>А ещё он ярый фанат Элджея</li>
         </ul>
-        <div><img src="images/6.jpg" width="300" height="500"</div>
+        <div><img src="Images/6.jpg" width="300" height="500"</div>
     </div>
     <hr>
 </body>
