--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Блог</h1>
     <p>Привет, меня зовут, Вита, сегодня я немного расскажу о себе и о моём коте.</p>
     <div>Это я</div>
-    <div><img src="Images/5.jpg" width="450" height="450" alt="Это я"></div>
+    <div><img src="Images/I.jpg" width="450" height="450" alt="Это я"></div>
     <div>Я учусь на 3-ем курсе в МГКИТе</div>
     <div>На дистанционном обучении я чаще всего занимаюсь:<br>
         <ul>
@@ -33,23 +33,23 @@
         <ul>
             <li>Он у меня футболист</li>
         </ul>
-        <div><img src="Images/1.jpg" width="300" height="500"</div>
+        <div><img src="Images/Cat1.jpg" width="300" height="500"</div>
         <ul>
             <li>А также немножко мангуст</li>
         </ul>   
-        <div><img src="Images/2.jpg" width="300" height="500"</div>
+        <div><img src="Images/Cat2.jpg" width="300" height="500"</div>
         <ul>
             <li>Так кот мне помогал отмечать новый год</li>
         </ul>
-        <div><img src="Images/3.jpg" width="300" height="500"</div>
+        <div><img src="Images/Cat3.jpg" width="300" height="500"</div>
         <ul>
             <li>А также он тот ещё обжора</li>
         </ul>
-        <div><img src="Images/4.jpg" width="300" height="500"</div>
+        <div><img src="Images/Cat4.jpg" width="300" height="500"</div>
         <ul>
             <li>А ещё он ярый фанат Элджея</li>
         </ul>
-        <div><img src="Images/6.jpg" width="300" height="500"</div>
+        <div><img src="Images/Cat5.jpg" width="300" height="500"</div>
     </div>
     <hr>
 </body>
